# Character-Telegram-Bot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  configurate.py  db.sqlite3  docker-compose.yml  fsm.py  main.py  middleware.py  models.py  pyproject.toml  requirements.in  requirements.txt  routrer.py  settings.py
djangoProject1/: settings.py  urls.py
hospital/: admin.py  models.py  serializers.py  views.py
hospital/migrations/: 0001_initial.py
migrations/: env.py
migrations/versions/: d5b33aa6ce26_initial.py
services/: amplitude.py  db_requests.py  open_ai.py  render.py  utils.py
templates/: character.html  gpt_200.html  gpt_error.html  menu.html  start.html
