[tool.poetry]
name = "character-telegram-bot"
version = "0.1.0"
description = ""
authors = ["DonOutcast <sham1996@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.2.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
aiohttp = "^3.9.1"
jinja2 = "^3.1.2"
asyncpg = "^0.29.0"
openai = "^1.3.7"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
