[tool.poetry]
name = "character-telegram-bot"
version = "0.1.0"
description = ""
authors = ["DonOutcast <sham1996@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
aiohttp = "^3.9.1"
jinja2 = "^3.1.2"
asyncpg = "^0.29.0"
openai = "^1.3.7"
greenlet = "^3.0.2"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
profile = "black"
src_paths = "."
lines_after_imports = 2